# OpenGLBasics

./: CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
headers/: cleanUp.h  createGraphicsPipeline.h  initializeProgram.h  mainLoop.h  vertexSpecification.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: cleanUp.cpp  createGraphicsPipeline.cpp  initializeProgram.cpp  mainLoop.cpp  vertexSpecification.cpp
